Sprint 16. Delete and Update operations work correctly. Update method redone. Bootstrap added.

--- a/src/main/java/softserve/sprint16/AddressBook/src/main/webapp/WEB-INF/header.html
+++ b/src/main/java/softserve/sprint16/AddressBook/src/main/webapp/WEB-INF/header.html
@@ -1,4 +1,7 @@
-<h2>Address Book Web Application</h2>
-<a href="/home">Go to Home</a>
-<a href="/records/create">Create record</a>
-<a href="/records/list">Show all records</a>
+<h2 class="mt-5">Address Book Web Application</h2>
+
+<div aria-label="Basic example" class="btn-group mt-3" role="group">
+    <a class="btn btn-secondary" href="/records/home" type="button">Go to Home</a>
+    <a class="btn btn-secondary" href="/records/create" type="button">Create record</a>
+    <a class="btn btn-secondary" href="/records/list" type="button">Show all records</a>
+</div>
